another.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-po
  name: nginx-po
spec:
  containers:
  - image: nginx
    name: nginx-po
  restartPolicy: Always
status: {}
