init.yml
apiVersion: v1
kind: Pod
metadata:
  name: init-po
  labels:
    app: myapp
spec:
  containers:
  - name: myapp-container
    image: busybox:1.28
    command: ["sleep","10000"]
