pod1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1
  name: pod1
spec:
  containers:
  - image: httpd:2.4.41-alpine
    name: pod1-container
    resources: {}
  nodeSelector:
    node-role.kubernetes.io/master: ""
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
