schedule.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod1-container
  name: pod1-container
spec:
  containers:
  - image: httpd:2.4.41-alpine
    name: pod1-container
  tolerations:
  - key: "node-role.kubernetes.io/master"
    effect: "NoSchedule"
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
