user-id.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: userID
  name: user
spec:
  containers:
  - image: nginx
    name: user
