svc-exp.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-11-02T19:06:04Z"
  labels:
    run: expose-me
  name: svc-exp
  namespace: default
  resourceVersion: "176536"
  uid: 72e9ee74-ae99-4bf5-a535-1014d50747b6
spec:
  clusterIP: 10.110.13.77
  clusterIPs:
  - 10.110.13.77
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: expose-me
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
