policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-policy
spec:
  podSelector:
    matchLabels:
      app: expose-me
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: granted
